; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-systemh/extr_io.c_sh7751systemh_inb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-systemh/extr_io.c_sh7751systemh_inb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i8 @sh7751systemh_inb(i64 %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = call i64 @PXSEG(i64 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = inttoptr i64 %8 to i8*
  %10 = load volatile i8, i8* %9, align 1
  store i8 %10, i8* %2, align 1
  br label %25

11:                                               ; preds = %1
  %12 = load i64, i64* %3, align 8
  %13 = icmp ule i64 %12, 1009
  br i1 %13, label %14, label %19

14:                                               ; preds = %11
  %15 = load i64, i64* %3, align 8
  %16 = call i64 @ETHER_IOMAP(i64 %15)
  %17 = inttoptr i64 %16 to i8*
  %18 = load volatile i8, i8* %17, align 1
  store i8 %18, i8* %2, align 1
  br label %25

19:                                               ; preds = %11
  %20 = load i64, i64* %3, align 8
  %21 = call i32* @port2adr(i64 %20)
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, 255
  %24 = trunc i32 %23 to i8
  store i8 %24, i8* %2, align 1
  br label %25

25:                                               ; preds = %19, %14, %7
  %26 = load i8, i8* %2, align 1
  ret i8 %26
}

declare dso_local i64 @PXSEG(i64) #1

declare dso_local i64 @ETHER_IOMAP(i64) #1

declare dso_local i32* @port2adr(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
